Config File Generator First Release

--- a/ConfigFileGenerator.ConfigCreator/ConfigFileGenerator.ConfigCreator.csproj
+++ b/ConfigFileGenerator.ConfigCreator/ConfigFileGenerator.ConfigCreator.csproj
@@ -72,4 +72,7 @@
     </PropertyGroup>
     <Error Condition="!Exists('..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1\build\net46\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1\build\net46\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props'))" />
   </Target>
+  <PropertyGroup>
+    <PostBuildEvent>xcopy "$(ProjectDir)bin\Release" "$(SolutionDir)ConfigFileGenerator\tools" /Y /I /E</PostBuildEvent>
+  </PropertyGroup>
 </Project>
