--- a/ConfigFileGenerator/ConfigFileGenerator.nuspec
+++ b/ConfigFileGenerator/ConfigFileGenerator.nuspec
@@ -7,7 +7,7 @@
     <authors>DHT</authors>
     <owners>DHT</owners>
     <requireLicenseAcceptance>true</requireLicenseAcceptance>
-    <description>Handling configuration files easear</description>
+    <description>Handling configuration files easily</description>
     <releaseNotes></releaseNotes>
     <copyright>Copyright 2019</copyright>
     <tags>Configuration</tags>
